--- a/templates/summoner/index.html.twig
+++ b/templates/summoner/index.html.twig
@@ -2,10 +2,10 @@
 
 {% block title %}Hello SummonerController!{% endblock %}
 
-{% block javascripts %}
+{# {% block javascripts %}
     {{ parent() }}
 
-{% endblock %}
+{% endblock %} #}
 
 
 {% block body %}
