--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,7 @@
         {% endblock %}
     </head>
     <body>
+        <a class="btn btn-primary" href="{{ path("summoner_index") }}" role="button">Link</a>
         {% block body %}{% endblock %}
     </body>
 </html>
